--- a/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
+++ b/src/app/components/ciclo-pagamento-lista/ciclo-pagamento-lista.component.html
@@ -49,9 +49,12 @@
 <div class="col-md-12" style="margin-left: 0%">
         <div class="box box-primary">
           <div class="box-header with-border">
-                <button class="btn btn-primary" (click)="criarNovoCiclo()">
+                <button type="button" class="btn btn-info btn-small" data-toggle="modal" data-target="#modalNovoCiclo">
                         <i class="fa fa-pencil">  Novo Ciclo</i>
                 </button>
+                <!-- <button class="btn btn-primary" (click)="criarNovoCiclo()">
+                        <i class="fa fa-pencil">  Novo Ciclo</i>
+                </button> -->
           </div>
 </div>
           
@@ -163,6 +166,80 @@
                                   </div>
                         <div class="modal-footer">
                             <button type="submit"  (click)="cloneCreate()" [disabled]="!form.valid" class="btn btn-info pull-right">Salvar</button>
+                        </div>
+                </form>
+            </div>
+         
+          </div>
+          
+        </div>
+</div>
+
+<div class="modal fade" id="modalNovoCiclo" role="dialog">
+        <div class="modal-dialog">
+        
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Novo Ciclo de Pagamento</h4>
+            </div>
+            <div class="modal-body">
+                    <form class="form-horizontal" #form="ngForm"  novalidate> 
+                            <div class="box-body">
+                                    <div class="row">
+                                      <div class="col-xs-4">
+                                            <input 
+                                                  type="text" 
+                                                  [(ngModel)]="ciclo.nome"
+                                                  class="form-control" 
+                                                  name="nome"
+                                                  id="inputNome" 
+                                                  #nome="ngModel"
+                                                  placeholder="Nome"
+                                                  required>
+                                            <span class="help-block" *ngIf="nome.invalid && nome.dirty">Nome Obrigatória</span>
+                                      </div>
+                                      <div class="col-xs-4">
+                                        <select  [(ngModel)]="ciclo.mes"
+                                            class="form-control select2" 
+                                            id="inputMes" 
+                                            [ngModelOptions]="{standalone: true}"
+                                            style="width: 100%"
+                                            required
+                                            ngModel>
+                                            <option>1</option>
+                                            <option>2</option>
+                                            <option>3</option>
+                                            <option>4</option>
+                                            <option>5</option>
+                                            <option>6</option>
+                                            <option>7</option>
+                                            <option>8</option>
+                                            <option>9</option>
+                                            <option>10</option>
+                                            <option>11</option>
+                                            <option>12</option>
+                                        </select>
+                                      </div>
+                                      <div class="col-xs-4">
+                                        <select  [(ngModel)]="ciclo.ano"
+                                            class="form-control select2" 
+                                            id="inputAno" 
+                                            [ngModelOptions]="{standalone: true}"
+                                            style="width: 100%"
+                                            required
+                                            ngModel>
+                                            <option>2018</option>
+                                            <option>2019</option>
+                                            <option>2020</option>
+                                            <option>2021</option>
+                                        </select>
+                                       </div>
+                                    </div>
+                                  </div>
+                        <div class="modal-footer">
+                            <button type="submit"  (click)="criarNovoCiclo()" [disabled]="!form.valid" class="btn btn-info pull-right">Salvar</button>
                         </div>
                 </form>
             </div>
