--- a/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
+++ b/src/app/components/ciclo-pagamento/ciclo-pagamento.component.html
@@ -9,7 +9,7 @@
                 <div class="col-xs-3">
                     <div class="small-box bg-green">
                        <div class="inner">
-                           <h3 id="credito">{{ sumario.credito }}</h3>
+                           <h3 class="credito">{{ sumario.credito }}</h3>
                            <p>Total créditos</p>
                        </div>
                        <div class="icon">
@@ -20,7 +20,7 @@
                  <div class="col-xs-3">
                      <div class="small-box bg-red">
                         <div class="inner">
-                            <h3 id="debito">{{ sumario.pago }}</h3>
+                            <h3 class="debito">{{ sumario.pago }}</h3>
                             <p>Pago</p>
                         </div>
                         <div class="icon">
@@ -42,7 +42,7 @@
                   <div class="col-xs-3">
                      <div class="small-box bg-blue">
                         <div class="inner">
-                            <h3 id="saldo">{{ sumario.saldo }}</h3>
+                            <h3 class="saldo">{{ sumario.saldo }}</h3>
                             <p>Saldo</p>
                         </div>
                         <div class="icon">
@@ -154,8 +154,7 @@
                                                   ngModel>
                                             </td>
                                         <td>
-                                            <input (change)="calculadora()"
-                                                  type="number"
+                                            <input type="number"
                                                   [(ngModel)]="cred.valor"
                                                   class="form-control"
                                                   [ngModelOptions]="{standalone: true}"
@@ -188,7 +187,7 @@
                             <div class="col-xs-3">
                                 <div class="bg-green">
                                    <div class="inner">
-                                       <h3 id="credito">{{ sumario.credito }}</h3>
+                                       <h3 class="credito">{{ sumario.credito }}</h3>
                                        <p>Total créditos</p>
                                    </div>
                                 </div>
@@ -196,7 +195,7 @@
                              <div class="col-xs-3">
                                  <div class="bg-red">
                                     <div class="inner">
-                                        <h3 id="debito">{{ sumario.pago }}</h3>
+                                        <h3 class="debito">{{ sumario.pago }}</h3>
                                         <p>Pago</p>
                                     </div>
                                  </div>
@@ -212,7 +211,7 @@
                               <div class="col-xs-3">
                                  <div class="bg-blue">
                                     <div class="inner">
-                                        <h3 id="saldo">{{ sumario.saldo }}</h3>
+                                        <h3 class="saldo">{{ sumario.saldo }}</h3>
                                         <p>Saldo</p>
                                     </div>
                                  </div>
@@ -256,7 +255,7 @@
                                         </select>
                                     </td>
                                     <td>
-                                        <input (change)="calculadora()"
+                                        <input 
                                         type="number" 
                                         [(ngModel)]="deb.valor"
                                         class="form-control" 
@@ -264,8 +263,8 @@
                                         ngModel>
                                     </td>
                                     <td> 
-                                        <select  [(ngModel)]="deb.status"
-                                            (change)="calculadora()"
+                                        <select (change)="statusDebito(deb)"
+                                            [(ngModel)]="deb.status"
                                             class="form-control select2" 
                                             id="inputStatus" 
                                             [ngModelOptions]="{standalone: true}"
